--- a/static/css/store_hoodie.css
+++ b/static/css/store_hoodie.css
@@ -4,153 +4,228 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
-  }
-  
-  .hoodie-page .div {
+}
+
+.hoodie-page .one-logo-1{
+    position:fixed;
+}
+
+.hoodie-page .div {
     background-color: #ffffff;
     overflow: hidden;
     width: 100%;
     height: 1080px;
     position: static;
-  }
-  
-  .hoodie-page .navbar {
+}
+
+.hoodie-page .navbar {
     position: absolute;
     width: 100%;
     height: 63px;
     top: 0;
     left: 0;
-  }
-  
-  .hoodie-page .navbar-2 {
+}
+
+.hoodie-page .navbar-2 {
     position: absolute;
     width: 100%;
     height: 63px;
     background-color: #384037;
-  }
+}
 
-  .hoodie-page .navbar-2 img {
-    position: fixed;
+.hoodie-page .navbar-2 img {
+    position: absolute;
     height: 60px;
     padding-left: 10px;
     width: 100px;
     margin-top: 0px;
     padding-top: 0px;
-  }
-  
-  .hoodie-page .home {
-    width: 38px;
-    left: 596px;
-    position: absolute;
-    top: 24px;
-    font-family: "Urbanist", sans-serif;
-    font-style: normal;
-    font-weight: 200;
-    color: #ffffff;
-    font-size: 12px;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .hoodie-page .about {
+}
+
+.hoodie-page .home {
     width: 42px;
-    left: 721px;
+    left: 525px;
     position: absolute;
-    top: 24px;
+    top: 22px;
     font-family: "Urbanist", sans-serif;
     font-style: normal;
     font-weight: 200;
-    color: #ffffff;
-    font-size: 12px;
+    background:transparent;
+    color: white;
+    border-color: #384037;
+    border-style: solid;
+    font-size: 15px;
     letter-spacing: 0;
     line-height: normal;
-  }
-  
-  .hoodie-page .shop {
+}
+
+.hoodie-page .home:hover{
+    color: #bbc4bf;
+}
+
+.hoodie-page .shop {
     width: 34px;
-    left: 663px;
+    left: 625px;
     position: absolute;
-    top: 24px;
+    top: 22px;
     font-family: "Urbanist", sans-serif;
     font-style: normal;
     font-weight: 200;
-    color: #ffffff;
-    font-size: 12px;
+    background:transparent;
+    color: white;
+    border-color: #384037;
+    border-style: solid;
+    font-size: 15px;
     letter-spacing: 0;
     line-height: normal;
-  }
-  
-  .hoodie-page .contact {
+}
+
+.hoodie-page .shop:hover{
+    color: #bbc4bf;
+}
+
+.hoodie-page .about {
+    width: 42px;
+    left: 725px;
+    position: absolute;
+    top: 22px;
+    font-family: "Urbanist", sans-serif;
+    font-style: normal;
+    font-weight: 200;
+    background:transparent;
+    color: white;
+    border-color: #384037;
+    border-style: solid;
+    font-size: 15px;
+    letter-spacing: 0;
+    line-height: normal;
+}
+
+.hoodie-page .about:hover{
+    color: #bbc4bf;
+}
+
+.hoodie-page .cart{
+    position: absolute;
+    top:15px;
+    width: 57px;
+    height: 20px;
+    left: 1350px;
+    color: white;
+    background: transparent;
+    border:none;
+    font-size: 27px;
+}
+
+.hoodie-page .cart:hover{
+    color: #bbc4bf;
+}
+
+.hoodie-page #selectedColor{
+    color:#e8edeb;
+}
+
+.hoodie-page #selectedColor:hover{
+    cursor:default;
+    color:#e8edeb;
+}
+
+.hoodie-page .contact {
     position: absolute;
     width: 57px;
-    top: 24px;
-    left: 785px;
+    top: 22px;
+    left: 825px;
     font-family: "Urbanist", sans-serif;
     font-style: normal;
     font-weight: 200;
-    color: #ffffff;
-    font-size: 12px;
+    background:transparent;
+    color: white;
+    border-color: #384037;
+    border-style: solid;
+    font-size: 15px;
     letter-spacing: 0;
     line-height: normal;
-  }
-  
-  .hoodie-page .overlap {
+}
+
+.hoodie-page .contact:hover{
+    color: #bbc4bf;
+}
+
+.hoodie-page .overlap {
     position: absolute;
-    width: 1446px;
-    height: 274px;
-    top: 806px;
+    width: 100%;
+    height: 320px;
+    top: 750px;
     left: 0;
     background-color: #e8edeb;
-  }
-  
-  .hoodie-page .frame {
+}
+
+.hoodie-page .frame {
     display: inline-flex;
     align-items: flex-start;
     gap: 45px;
     position: absolute;
-    top: 105px;
-    left: 450px;
-  }
+    top: 120px;
+    left: 520px;
+}
 
-  .hoodie-page .frame-ex {
+.hoodie-page .frame-ex {
     display: inline-flex;
     align-items: flex-start;
     gap: 45px;
     position: absolute;
-    top: 190px;
-    left: 455px;
-  }
+    top: 200px;
+    left: 520px;
+}
 
-  .hoodie-page .change-color{
+.hoodie-page .change-color{
     display: inline-flex;
     align-items: flex-start;
     position: absolute;
     font-family: "Urbanist", sans-serif;
     font-style: normal;
     font-weight: 200;
-    left:545px;
-    top: 40px;
-  }
+    font-size: larger;
+    left:600px;
+    top: 50px;
+}
 
-  .hoodie-page .select-size{
+.hoodie-page .select-size{
     display: inline-flex;
     align-items: flex-start;
     font-family: "Urbanist", sans-serif;
     font-style: normal;
-    font-weight: 200;
-    left: 900px;
-    top:40px;
+    font-weight: 300;
+    font-size: larger;
+    left: 1000px;
+    top:50px;
     position:absolute;
-  }
+}
 
-  .hoodie-page .size{
+.hoodie-page .select{
+    position: relative;
+    display: inline-flex;
+    align-items: flex-start;
+    left:120px;
+}
+
+.hoodie-page .size{
     display: inline-flex;
     align-items: flex-start;
     position: absolute;
-    top: 50px
-  }
-  
-  .hoodie-page .ellipse {
+    top: 50px;
+    gap:20px;
+}
+
+/*.tshirt-page .size-2{
+    display: inline-flex;
+    align-items: flex-start;
+    position: absolute;
+    top: 150px;
+    gap:20px;
+}*/
+
+.hoodie-page .ellipse {
     width: 40px;
     height: 40px;
     margin-top: -1px;
@@ -165,14 +240,14 @@
     cursor: pointer; 
     outline: none; 
     transition: 0.2s all;
-  }
+}
 
-  .hoodie-page .ellipse:active { 
+.hoodie-page .ellipse:active { 
     transform: scale(0.98); 
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
-  }
-  
-  .hoodie-page .ellipse-2 {
+}
+
+.hoodie-page .ellipse-2 {
     width: 40px;
     height: 40px;
     margin-top: -1px;
@@ -187,14 +262,14 @@
     cursor: pointer; 
     outline: none; 
     transition: 0.2s all;
-  }
+}
 
-  .hoodie-page .ellipse-2:active { 
+.hoodie-page .ellipse-2:active { 
     transform: scale(0.98); 
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
-  }
-  
-  .hoodie-page .ellipse-3 {
+}
+
+.hoodie-page .ellipse-3 {
     width: 40px;
     height: 40px;
     margin-top: -1px;
@@ -208,14 +283,14 @@
     cursor: pointer; 
     outline: none; 
     transition: 0.2s all;
-  }
+}
 
-  .hoodie-page .ellipse-3:active { 
+.hoodie-page .ellipse-3:active { 
     transform: scale(0.98); 
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
-  }
-  
-  .hoodie-page .ellipse-4 {
+}
+
+.hoodie-page .ellipse-4 {
     width: 40px;
     height: 40px;
     margin-top: -1px;
@@ -229,14 +304,14 @@
     cursor: pointer; 
     outline: none; 
     transition: 0.2s all;
-  }
+}
 
-  .tshirt-page .ellipse-4:active { 
+.hoodie-page .ellipse-4:active { 
     transform: scale(0.98); 
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
-  }
-  
-  .hoodie-page .ellipse-5 {
+}
+
+.hoodie-page .ellipse-5 {
     width: 40px;
     height: 40px;
     margin-top: -1px;
@@ -251,14 +326,14 @@
     cursor: pointer; 
     outline: none; 
     transition: 0.2s all;
-  }
+}
 
-  .tshirt-page .ellipse-5:active { 
+.hoodie-page .ellipse-5:active { 
     transform: scale(0.98); 
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
-  }
+}
 
-  .hoodie-page .ellipse-6 {
+.hoodie-page .ellipse-6 {
     width: 40px;
     height: 40px;
     margin-top: -1px;
@@ -273,14 +348,14 @@
     cursor: pointer; 
     outline: none; 
     transition: 0.2s all;
-  }
-  
-  .hoodie-page .ellipse-6:active { 
+}
+
+.hoodie-page .ellipse-6:active { 
     transform: scale(0.98); 
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
-  }
+}
 
-  .hoodie-page .ellipse-7 {
+.hoodie-page .ellipse-7 {
     width: 40px;
     height: 40px;
     margin-top: -1px;
@@ -295,14 +370,14 @@
     cursor: pointer; 
     outline: none; 
     transition: 0.2s all;
-  }
+}
 
-  .hoodie-page .ellipse-7:active { 
+.hoodie-page .ellipse-7:active { 
     transform: scale(0.98); 
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
-  }
+}
 
-  .hoodie-page .ellipse-8 {
+.hoodie-page .ellipse-8 {
     width: 40px;
     height: 40px;
     margin-top: -1px;
@@ -317,17 +392,37 @@
     cursor: pointer; 
     outline: none; 
     transition: 0.2s all;
-  }
+}
 
-  .hoodie-page .ellipse-8:active { 
+.hoodie-page .ellipse-8:active { 
     transform: scale(0.98); 
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
-  }
+}
 
-  .hoodie-page .text-wrapper {
+.hoodie-page .sizebtn{
+    top: 3px;
+    font-family: "Urbanist", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    color: #000000;
+    font-size: 16px;
+    letter-spacing: 0;
+    line-height: normal;
+    white-space: nowrap;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width:40px;
+    height: 32px;
+    position: relative;
+    background-color: #e8edeb;
+}
+
+.hoodie-page .text-wrapper {
     position: absolute;
     top: 158px;
-    left: 606px;
+    left: 600px;
     font-family: "Urbanist", sans-serif;
     font-style: normal;
     font-weight: 250;
@@ -337,9 +432,9 @@
     line-height: normal;
     padding-top: 10px;
     padding-left: 8px;
-  }
-  
-  .hoodie-page .overlap-group {
+}
+
+.hoodie-page .overlap-group {
     position: absolute;
     width: 88px;
     height: 33px;
@@ -348,9 +443,10 @@
     background-color: #e8edeb;
     border: 1px solid;
     border-color: #000000;
-  }
-  
-  .hoodie-page .text-wrapper-2 {
+    padding:0px;
+}
+
+.hoodie-page .text-wrapper-2 {
     top: 6px;
     left: 27px;
     font-family: "Urbanist", sans-serif;
@@ -361,9 +457,9 @@
     position: absolute;
     letter-spacing: 0;
     line-height: normal;
-  }
-  
-  .hoodie-page .div-wrapper {
+}
+
+.hoodie-page .div-wrapper {
     position: absolute;
     width: 88px;
     height: 33px;
@@ -377,9 +473,9 @@
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-color: #000000;
-  }
-  
-  .hoodie-page .text-wrapper-3 {
+}
+
+.hoodie-page .text-wrapper-3 {
     top: 6px;
     left: 28px;
     font-family: "Urbanist", sans-serif;
@@ -390,9 +486,9 @@
     position: absolute;
     letter-spacing: 0;
     line-height: normal;
-  }
-  
-  .hoodie-page .text-wrapper-4 {
+}
+
+.hoodie-page .text-wrapper-4 {
     position: absolute;
     top: 78px;
     left: 1174px;
@@ -403,29 +499,28 @@
     letter-spacing: 0;
     line-height: normal;
     white-space: nowrap;
-  }
-  
-  .hoodie-page .group {
+}
+
+.hoodie-page .group {
     position: absolute;
     width: 174px;
     height: 33px;
     top: 111px;
     left: 100px;
-  }
-  
-  .hoodie-page .overlap-2 {
+}
+
+.hoodie-page .overlap-2 {
     position: relative;
     width: 172px;
     height: 33px;
     background-color: #e8edeb;
     border: 1px solid;
     border-color: #000000;
-  }
-  
-  .hoodie-page .text-wrapper-5 {
-    position: absolute;
-    top: 6px;
-    left: 24px;
+}
+
+.hoodie-page .getDesign {
+    top: 25px;
+    left: 50px;
     font-family: "Urbanist", sans-serif;
     font-style: normal;
     font-weight: 300;
@@ -434,35 +529,64 @@
     letter-spacing: 0;
     line-height: normal;
     white-space: nowrap;
-  }
-  
-  .hoodie-page .frame-wrapper {
-    position: absolute;
-    width: 174px;
-    height: 33px;
-    top: 170px;
-    left: 1170px;
-  }
-  
-  .hoodie-page .frame-2 {
-    height: 39px;
-  }
-  
-  .hoodie-page .frame-3 {
     display: inline-flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
     padding: 7px 25px;
     position: relative;
-    top: 3px;
-    left: 2px;
     background-color: #e8edeb;
-    border: 1px solid;
-    border-color: #000000;
-  }
-  
-  .hoodie-page .text-wrapper-6 {
+}
+
+.hoodie-page .frame-wrapper {
+    position: absolute;
+    width: 174px;
+    height: 33px;
+    top: 140px;
+    left: 960px;
+}
+
+.hoodie-page .frame-2 {
+    height: 39px;
+}
+
+.hoodie-page .price{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Urbanist", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: larger;
+    gap: 10px;
+    padding: 0px 0px 0px 0px;
+    position: relative;
+    top: 48px;
+    left:70px;
+    background-color: #e8edeb;
+}
+
+.hoodie-page .addToCartBtn{
+    top: 60px;
+    left: 200px;
+    font-family: "Urbanist", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    color: #000000;
+    font-size: 16px;
+    letter-spacing: 0;
+    line-height: normal;
+    white-space: nowrap;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 7px 25px;
+    position: absolute;
+    background-color: #e8edeb;
+}
+
+.hoodie-page .text-wrapper-6 {
     position: relative;
     width: fit-content;
     margin-top: -1px;
@@ -474,9 +598,9 @@
     letter-spacing: 0;
     line-height: normal;
     white-space: nowrap;
-  }
-  
-  .hoodie-page .frame-4 {
+}
+
+.hoodie-page .frame-4 {
     display: inline-flex;
     height: 517px;
     align-items: center;
@@ -484,37 +608,46 @@
     gap: 100px;
     position: absolute;
     top: 206px;
-    left: 187px;
-  }
-  
-  .hoodie-page .rectangle {
+    left: 50px;
+    gap:70px;
+}
+
+.hoodie-page .rectangle {
     position: relative;
-    width: 483px;
-    height: 514px;
+    width: 400px;
+    height: 400px;
     background-color: #e8edeb;
     overflow: hidden;
-  }
+}
 
-  .tshirt-page .h-front{
+.hoodie-page .h-front{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
     z-index: 0;
     left: 100px;
-  }
+}
 
-  .tshirt-page .h-back{
+.hoodie-page .h-design{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
     z-index: 0;
-  }
-  
-  .hoodie-page .text-wrapper-7 {
-    top: 167px;
-    left: 187px;
+}
+
+.hoodie-page .h-back{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    z-index: 0;
+}
+
+.hoodie-page .text-wrapper-7 {
+    top: 200px;
+    left: 210px;
     font-family: "Urbanist", sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -524,12 +657,12 @@
     position: absolute;
     letter-spacing: 0;
     line-height: normal;
-  }
-  
-  .hoodie-page .text-wrapper-8 {
+}
+
+.hoodie-page .text-wrapper-8 {
     position: absolute;
-    top: 85px;
-    left: 132px;
+    top: 105px;
+    left: 44%;
     font-family: "Urbanist", sans-serif;
     font-optical-sizing: auto;
     font-weight: 650;
@@ -538,11 +671,11 @@
     font-size: 48px;
     letter-spacing: 0;
     line-height: normal;
-  }
-  
-  .hoodie-page .text-wrapper-9 {
-    top: 168px;
-    left: 770px;
+}
+
+.hoodie-page .text-wrapper-0 {
+    top: 200px;
+    left: 660px;
     font-family: "Urbanist", sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -552,4 +685,18 @@
     position: absolute;
     letter-spacing: 0;
     line-height: normal;
-  }
+}
+
+.hoodie-page .text-wrapper-9 {
+    top: 200px;
+    left: 1140px;
+    font-family: "Urbanist", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    color: #000000;
+    font-size: 32px;
+    white-space: nowrap;
+    position: absolute;
+    letter-spacing: 0;
+    line-height: normal;
+}
