--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -6,12 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
         .hidden {
             display: none;
         }
     </style>
+    <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+    <div class="checkout-page">
+        <div class="div">
+            <div class="navbar">
+                <div class="navbar-2">
+                    <img src="images/On1lyOne-White.png" class="one-logo-1" >
+                    <button class="home">HOME</button>
+                    <button class="about">ABOUT</button>
+                    <button class="shop">SHOP</button>
+                    <button class="contact">CONTACT</button>
+                    <button class="cart" ><i class="fa fa-shopping-cart"></i></button>
+                </div>
+            </div>
     <h2>Shipping Details</h2>
     <form id="form">
         {% csrf_token %}
@@ -51,6 +67,8 @@
     <div class="box-element hidden" id="payment-info">
         <button id="make-payment">Pay</button>
     </div>
+</div>
+</div>
 
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', function() {
