--- a/store/templates/store/store_tshirt.html
+++ b/store/templates/store/store_tshirt.html
@@ -7,6 +7,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
     <link rel="stylesheet" href="{% static 'css/store_tshirt.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -15,16 +16,17 @@
             <div class="navbar">
                 <div class="navbar-2">
                     <img src="images/On1lyOne-White.png" class="one-logo-1" >
-                    <div class="home">HOME</div>
-                    <div class="about">ABOUT</div>
-                    <div class="shop">SHOP</div>
-                    <div class="contact">CONTACT</div>
+                    <button class="home">HOME</button>
+                    <button class="about">ABOUT</button>
+                    <button class="shop">SHOP</button>
+                    <button class="contact">CONTACT</button>
+                    <a href="{% url 'cart' %}"><button class="cart"><i class="fa fa-shopping-cart"></i></button></a>
                 </div>
             </div>
             <div class="overlap">
                 <div class="change-color">Change Colour</div>
                 <div class="frame">
-                    <button onclick="selectColor(this, 'white', '{% static "images1/T-White-Front.png" %}', '{% static "images1/T-White-Back.png" %}')" class="ellipse" id="white"></button>
+                    <button onclick="selectColor(this, 'black', '{% static "images1/T-White-Front.png" %}', '{% static "images1/T-White-Back.png" %}')" class="ellipse" id="white"></button>
                     <button onclick="selectColor(this, 'black', '{% static "images1/T-Black-Front.png" %}', '{% static "images1/T-Black-Back.png" %}')" class="ellipse-2" id="black"></button>
                     <button onclick="selectColor(this, 'maroon', '{% static "images1/T-Maroon-Front.png" %}', '{% static "images1/T-Maroon-Back.png" %}')" class="ellipse-3" id="maroon"></button>
                     <button onclick="selectColor(this, 'yellow', '{% static "images1/T-Yellow-Front.png" %}', '{% static "images1/T-Yellow-Back.png" %}')" class="ellipse-4" id="yellow"></button>
@@ -38,41 +40,46 @@
                 <div class="select-size">
                     <div class="select">Select Size</div>
                     <div class="size">
-                        <button onclick="selectSize('XS')" id="btnXS">XS</button>
-                        <button onclick="selectSize('S')" id="btnS">S</button>
-                        <button onclick="selectSize('M')" id="btnM">M</button>
-                        <button onclick="selectSize('L')" id="btnL">L</button>
-                        <button onclick="selectSize('XL')" id="btnXL">XL</button>
-                        <button onclick="selectSize('XXL')" id="btnXXL">XXL</button>
+                        <button class="sizebtn" onclick="selectSize('XS')" id="btnXS">XS</button>
+                        <button class="sizebtn" onclick="selectSize('S')" id="btnS">S</button>
+                        <button class="sizebtn" onclick="selectSize('M')" id="btnM">M</button>
+                        <button class="sizebtn" onclick="selectSize('L')" id="btnL">L</button>
+                        <button class="sizebtn" onclick="selectSize('XL')" id="btnXL">XL</button>
+                        <button class="sizebtn" onclick="selectSize('XXL')" id="btnXXL">XXL</button>
                     </div>
                 </div>
-                <div class="price">
-                    Price: 1999
-                </div>
                 <div class="group">
-                    <div class="overlap-2"><div class="text-wrapper-5">Get a new design</div></div>
+                    <button class="getDesign">Get a new design</button>
                 </div>
                 <div class="frame-wrapper">
                     <div class="frame-2">
-                        <div class="frame-3"><button id="addToCartBtn" onclick="addToCart()">Add to Cart</button></div>
+                        <p class="price">
+                        Rs. 1999</p>
+                        <button class="addToCartBtn" onclick="addToCart()">Add to Cart</button>
                     </div>
                 </div>
                 <div id="selectedColor">Selected Color:</div>
             </div>
             <div class="frame-4">
                 <div class="rectangle">
-                    <div class="t-front" id="tshirt-front-div">
-                        <img id="tshirt-front" src="images/T-White-front.png">
-                    </div>
+                <div class="t-front">
+                    <img id="tshirt-front" src="images/T-White-Front.png">
+                </div>
                 </div>
                 <div class="rectangle">
-                    <div class="t-back" id="tshirt-back-div">
-                        <img id="tshirt-back" src="images/T-White-back.png">
+                    <div class="t-design">
+                        <img id="tshirt-design" src="images/T-White-Design.png">
                     </div>
+                    </div>
+                <div class="rectangle">
+                <div class="t-back">
+                    <img id="tshirt-back" src="images/T-White-Back.png">
+                </div>
                 </div>
             </div>
             <div class="text-wrapper-7">Front</div>
             <div class="text-wrapper-8">T-shirt</div>
+            <div class="text-wrapper-0">Design</div>
             <div class="text-wrapper-9">Back</div>
         </div>
     </div>
@@ -108,15 +115,14 @@
         let selectedColor = null;
 
         function selectColor(button, color, frontImg, backImg) {
-          document.querySelectorAll('.frame button').forEach(btn => {
-              btn.classList.remove('selected');
-          });
-          button.classList.add('selected');
-          document.getElementById('selectedColor').textContent = 'Selected Color: ' + color;
-          selectedColor = color;
+        document.querySelectorAll('.frame button').forEach(btn => {
+            btn.classList.remove('selected');
+        });
+        button.classList.add('selected');
+        document.getElementById('selectedColor').textContent = 'Selected Color: ' + color;
+        selectedColor = color;
           changecolor(frontImg, backImg); // Call changecolor function with the selected color's image URLs
-        }
-
+    }
         var csrfToken = "{{ csrf_token }}";
 
         function addToCart() {
