--- a/store/templates/store/store_tshirt.html
+++ b/store/templates/store/store_tshirt.html
@@ -39,7 +39,10 @@
                 </div>
             </div>
             <div class="group">
-                <button class="getDesign">Get a new design</button>
+                <a href="{% url 'generate_image_tshirt' %}">
+                    <button class="getDesign">Get a new design</button>
+                </a>
+                
             </div>
             <div class="frame-wrapper">
                 <div class="frame-2">
@@ -53,17 +56,17 @@
         <div class="frame-4">
             <div class="rectangle">
                 <div class="t-front">
-                    <img id="tshirt-front" src="images/T-White-Front.png">
+                    <img id="tshirt-front" src="{% static 'images1/T-White-Front.png' %}">
                 </div>
             </div>
             <div class="rectangle">
                 <div class="t-design">
-                    <img id="tshirt-design" src="images/T-White-Design.png">
+                    <img id="tshirt-design" src="/static/images/generated_image.jpg">
                 </div>
             </div>
             <div class="rectangle">
                 <div class="t-back">
-                    <img id="tshirt-back" src="images/T-White-Back.png">
+                    <img id="tshirt-back" src="{% static 'images1/T-White-Back.png' %}">
                 </div>
             </div>
         </div>
@@ -127,6 +130,7 @@
 
             // Get the selected back image URL
             let backImg = document.querySelector("#tshirt-back").getAttribute('src');
+            let design_image = document.querySelector('#tshirt-design').getAttribute('src');
 
             // Ensure that only the back image URL is passed to the backend
             fetch('/add-to-cart/', {
@@ -141,7 +145,8 @@
                     'product_type': 't-shirt',
                     'name': 'Your T-Shirt Product Name',
                     'price': 1999,
-                    'tshirt_back_image': backImg // Pass only back image URL
+                    'tshirt_back_image': backImg, // Pass only back image URL
+                    'design_image': design_image,
                 })
             })
                 .then(response => {
