--- a/store/templates/store/store_hoodie.html
+++ b/store/templates/store/store_hoodie.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="rectangle">
                     <div class="h-design">
-                        <img id="hoodie-design" src="/static/images/generated_image1.jpg">
+                        <img id="hoodie-design" src="{% static 'images/generated_image1.jpg' %}">
                     </div>
                 </div>
                 <div class="rectangle">
