--- a/store/templates/store/store_tshirt.html
+++ b/store/templates/store/store_tshirt.html
@@ -61,7 +61,7 @@
             </div>
             <div class="rectangle">
                 <div class="t-design">
-                    <img id="tshirt-design" src="/static/images/generated_image.jpg">
+                    <img id="tshirt-design" src="{% static 'images/generated_image.jpg' %}">
                 </div>
             </div>
             <div class="rectangle">
