fixed refresh the design

--- a/store/templates/store/store_tshirt.html
+++ b/store/templates/store/store_tshirt.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="group">
-                <a href="{% url 'generate_image_tshirt' %}">
+                <a href="{% url 'generate_image_tshirt' %}?refresh=true">
                     <button class="getDesign">Get a new design</button>
                 </a>
                 
@@ -165,6 +165,16 @@
                 .catch(error => {
                     console.error('Error:', error);
                 });
+        }
+    </script>
+
+    <script>
+        // Check if the URL contains the refresh parameter
+        var urlParams = new URLSearchParams(window.location.search);
+        var refreshParam = urlParams.get('refresh');
+        // If the refresh parameter is true, perform a hard refresh
+        if (refreshParam === 'true') {
+            window.location.reload(true);
         }
     </script>
 {% endblock %}
